# Block-xel-Engine

./: Cargo.toml  makecube.py
engine/: Cargo.toml  build.rs
engine/src/: camera.rs  cube.rs  lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs  vertex.rs
src/: main.rs
