[package]
name = "block-xel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path="./engine/"}
anyhow = "1.0.70"
bytemuck = { version = "1.13.1",features = [ "derive" ] }
cgmath = "0.18.0"
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.15.1"
winit = "0.28.3"
tobj = { version="3.2.5", features = ["async"]}
instant = "0.1.12"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
